# patina-qemu

./: .gitignore  .gitmodules  .markdownlint.yaml  Cargo.toml  Makefile.toml  Microsoft-Readme.md  Readme.md  Readme.rst  azurepipelines-coverage.yml  build-and-run-rust-dxe-core.bat  build_and_run_rust_binary.py  build_and_run_rust_dxe_core.py  mu_config_ext_dep.yaml  pip-requirements.txt  rust-toolchain  rust-toolchain.toml  rustfmt.toml  workspace_setup.py
.azurepipelines/: ManualPipeline.yml  MuDevOpsWrapper.yml  Platform-Build-GCC5.yml  Platform-Build-Job.yml  Platform-Build-VS.yml  Release.yml  Ubuntu-GCC5.yml  Windows-VS.yml
.azurepipelines/templates/: git-config-auth.yml  platform-build-run-steps.yml  pr-gate-build-job.yml  pr-gate-steps.yml
.devcontainer/: devcontainer.json
.github/actions/build-platform/: action.yml
.github/workflows/: auto-approve.yml  auto-merge.yml  label-issues.yml  label-sync.yml  platform-ci.yml  publish-qemu-bin.yml  release-draft.yml  stale.yml  triage-issues.yml
.github/workflows/label-issues/: regex-pull-requests.yml
.pytool/: CISettings.py
.pytool/Plugin/CargoTestHostCheck/: CargoTestHostCheck.py  CargoTestHostCheck_plug_in.yaml  Readme.md
.pytool/Plugin/HostBasedRustUnitTestRunner/: HostBasedRustUnitTestRunner.py  HostBasedRustUnitTestRunner_plug_in.yaml  Readme.md
.pytool/Plugin/RustCoverageCheck/: Readme.md  RustCoverageCheck.py  RustCoverageCheck_plug_in.yaml
.pytool/Plugin/RustPackageHelper/: RustPackageHelper.py  RustPackageHelper_plug_in.yaml
Crates/SerialPrintDxe/: Cargo.toml
Crates/SerialPrintDxe/src/serial_port_print/: x86_serial_port.rs
Crates/TplLock/: Cargo.toml
Crates/TplLock/src/: lib.rs
QemuPkg/Binaries/: DXECORE.QEMU_ext_dep.json
docs/: RustdocConventions.md  SelfCertifcationTest.md
