[workspace]

# Use the 2021 edition resolver
resolver = "2"

# Add packages that generate binaries here
members = [
    "Platforms/QemuQ35Pkg/DxeRust",
    "Platforms/QemuQ35Pkg/RustDriverDxe",
    "Common/MU/MsCorePkg/HelloWorldRustDxe",
]

# Add packages that generate libraries here
[workspace.dependencies]
RustAdvancedLoggerDxe = {path = "Common/MU/AdvLoggerPkg/Crates/RustAdvancedLoggerDxe"}
RustBootServicesAllocatorDxe = {path = "Common/MU/MsCorePkg/Crates/RustBootServicesAllocatorDxe"}

SerialPrintDxe = {path = "Crates/SerialPrintDxe"}
TplLock = {path = "Crates/TplLock"}

DxeRust = {path = "Platforms/QemuQ35Pkg/DxeRust"}
UefiDepexLib = {path = "Platforms/QemuQ35Pkg/Library/UefiDepexLib"}
UefiDevicePathLib = {path = "Platforms/QemuQ35Pkg/Library/UefiDevicePathLib"}
UefiEventLib = {path = "Platforms/QemuQ35Pkg/Library/UefiEventLib"}
UefiPe32Lib = {path = "Platforms/QemuQ35Pkg/Library/UefiPe32Lib"}
UefiProtocolDbLib = {path = "Platforms/QemuQ35Pkg/Library/UefiProtocolDbLib"}
UefiRustAllocatorLib = {path = "Platforms/QemuQ35Pkg/Library/UefiRustAllocatorLib"}
UefiGcdLib = {path = "Platforms/QemuQ35Pkg/Library/UefiGcdLib"}

corosensei = {git = "https://dev.azure.com/microsoft/MsUEFI/_git/corosensei_fork", rev = "b18e710605894b547da505c43d20feae52685ab3", default-features = false }
crc32fast = { version = "1.3.2", default-features = false }
goblin = { version = "0.7.1", default-features = false, features = ["pe32", "pe64"] }
indoc = "1.0"
lazy_static = { version = "1.0.0", features = ["spin_no_std"] }
linked_list_allocator = "0.9.0"
num-traits = { version = "0.2", default-features = false}
r-efi = "4.2.0"
r-pi = {git = "https://dev.azure.com/microsoft/MsUEFI/_git/r-pi", branch = "main"}
scroll = { version = "0.11", default-features = false, features = ["derive"]}
spin = "0.5.2"
uart_16550 = "0.2.0"
uuid = { version = "1", default-features = false }
volatile = "0.2.6"
x86_64 = "0.14.2"
